--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,4 +1,3 @@
-/* styles/Home.module.css */
 .container {
     padding: 16px;
     display: grid;
@@ -33,6 +32,7 @@
 }
 
 .card {
+    text-decoration: none;
     border: 1px solid #ddd;
     padding: 16px;
     border-radius: 8px;
@@ -51,9 +51,14 @@
     margin-bottom: 8px;
 }
 
+
 .title {
     font-size: 1.25rem;
     font-weight: bold;
+    text-decoration: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .region {
@@ -88,4 +93,8 @@
 .favoritesLink:hover {
     background-color: #0070f3;
     color: white;
+}
+
+.homeTitle {
+    text-decoration: none;
 }
